2007-09-02  Jean Brefort  <jean.brefort@normalesup.org>
	* configure.in: applied patch from Klaus Heinz fixes #1786288.

2007-08-30  Chris Morley

	* data/SMARTS_InteLigand.txt: Replaced with slightly modified
	version. I think the existing file was not based on a version
	which had been modified to work within OB's SMARTS implementation.
	
	* include/openbabel/fingerprint.h and src/fingerprint.cpp: 
	added GetBit() and virtual DescribeBits()
	
	* src/fingerprints/finger3.cpp: added PatternFP::DescribeBits
	Added various Trim()s to remove CRs, which is why FP3 had not
	been working, (as Noel noticed).

	* src/formats/fingerprintformat.cpp: added options to output
	description of functional groups in a molecule (esp when using FP4)
	
	* src/math/spacegroup.cpp: included <stdarg.h>

2007-08-27  Jean Brefort  <jean.brefort@normalesup.org>

	* include/openbabel/generic.h: make OBUnitCell use SpaceGroup.
	* include/openbabel/math/Makefile.am: add space groups.
	* include/openbabel/math/spacegroup.h: new SpaceGroup class.
	* include/openbabel/math/transform3d.h: new transform3d class (for
	use in space groups).
	* include/openbabel/math/vector3.h: add a new constructor and fix
	a const issue. 
	* src/formats/cifformat.cpp: use space groups.
	* src/generic.cpp: make OBUnitCell use SpaceGroup.
	* src/math/Makefile.am: add space groups.
	* src/math/spacegroup.cpp: new SpaceGroup class.
	* src/math/transform3d.cpp: new transform3d class.
	* src/math/vector3.cpp: fix a const issue.

2007-08-20  Jean Brefort  <jean.brefort@normalesup.org>

	* src/formats/xml/Makefile.am: removed obsolete cmlreactlformat stuff.
	* src/obconversion.cpp: fix dynamic libraries use on unix.

2007-08-19  Chris Morley

	Add chemical kinetics formats. These used std::tr1::shared_ptr
	and if this is not provided as such, the USE_BOOST macro needs to be
	defined and the Boost library installed.
	
	* include/openbabel/reaction.h: modified
	* src/formats/chemkinformat.cpp: added